# sdl2-gamecontroller

./: .clang-format  .eslintrc.json  .gitignore  .npmignore  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  RELEASENOTES.md  custom.d.ts  custom.js  eslint.config.mjs  index.d.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-pr.yml  codeql.yml  npm-publish.yml
contributing/: ISSUES.md  PULL-REQUESTS.md
docs/: API.md
src/: binding.cpp  sdlgamecontroller.cpp  sdlgamecontroller.h
test/: arguments.js  helloworld-custom.js  helloworld-custom.ts  helloworld.cjs  helloworld.js  helloworld.mjs  helloworld.ts  lengthy.js  lengthy.ts  package.json  pretest.sh  verify-packed-files.sh
